<resources>

    <string name="app_name">냉장고 구조대</string>

    <string name="main_toolbar_location">내 위치</string>
    <string name="main_toolbar_mypage">마이페이지</string>
    <string name="main_toolbar_top">상단</string>
    <string name="default_toolbar_back">뒤로 가기</string>
    <string name="add_ingr_toolbar_add_ingr">먹거리 추가</string>

    <string name="main_button_myfridge">냉장고</string>
    <string name="main_button_recipe">레시피</string>
    <string name="main_button_diet">식단</string>
    <string name="main_search">재료, 레시피 검색</string>
    <string name="main_add_descriptor">식재료 추가</string>
    <string name="main_tab_main_dish">주 요리</string>
    <string name="main_tab_side_dish">반찬</string>
    <string name="main_tab_conv">간편식</string>
    <string name="main_tab_meal">식사</string>
    <string name="main_tab_dessert">간식</string>

    <string name="add_ingr_name_hint">먹거리 이름</string>
    <string name="add_ingr_exp">유통 기한</string>
    <string name="add_ingr_storage">보관 장소</string>
    <string name="add_ingr_use">사용 기한</string>
    <string name="add_ingr_buy">구매 일자</string>
    <string name="add_ingr_undo">취소</string>
    <string name="add_ingr_save">저장</string>

    <string name="exit_app">앱 종료</string>
</resources>